<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".business.operation.activity.FlowOfFundsOperationActivity">

    <group android:id="@+id/action_add_entries">

        <item
            android:id="@+id/action_add_expense"
            android:icon="@android:drawable/ic_menu_add"
            android:orderInCategory="200"
            android:title="@string/action_add_expense"
            app:showAsAction="withText"/>

        <item
            android:id="@+id/action_add_income"
            android:icon="@android:drawable/ic_menu_add"
            android:orderInCategory="201"
            android:title="@string/action_add_income"
            app:showAsAction="withText"/>

        <item
            android:id="@+id/action_add_transfer"
            android:icon="@android:drawable/ic_menu_add"
            android:orderInCategory="202"
            android:title="@string/action_add_transfer"
            app:showAsAction="withText"/>

    </group>

</menu>
